--- a/frontend/multidialsum/src/app/app.component.html
+++ b/frontend/multidialsum/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div>
-<app-navbar></app-navbar>
-<app-summarizer></app-summarizer>
-<router-outlet></router-outlet>
-</div>
-<div>
-  <h1>{{ data?.message }}</h1>
-</div>
+  <app-navbar></app-navbar>
+  <router-outlet></router-outlet>
+  </div>
+  <app-input-text-field></app-input-text-field>
+  <div>
+    <h1>{{ data?.message }}</h1>
+  </div>
