--- a/frontend/multidialsum/src/app/app.component.html
+++ b/frontend/multidialsum/src/app/app.component.html
@@ -1,8 +1,20 @@
 <div>
   <app-navbar></app-navbar>
   <router-outlet></router-outlet>
-  </div>
+</div>
+<br>
+<div>
   <app-input-text-field></app-input-text-field>
-  <div>
+</div>
+
+
+
+
+
+
+
+
+
+  <!-- <div>
     <h1>{{ data?.message }}</h1>
-  </div>
+  </div> -->
