done basic frontend

--- a/frontend/multidialsum/src/app/app.component.html
+++ b/frontend/multidialsum/src/app/app.component.html
@@ -2,19 +2,11 @@
   <app-navbar></app-navbar>
   <router-outlet></router-outlet>
 </div>
+
 <br>
-<div>
+
+<!-- <div>
   <app-input-text-field></app-input-text-field>
-</div>
+</div> -->
 
-
-
-
-
-
-
-
-
-  <!-- <div>
-    <h1>{{ data?.message }}</h1>
-  </div> -->
+<app-summary-component></app-summary-component>
