--- a/frontend/multidialsum/src/app/app.component.html
+++ b/frontend/multidialsum/src/app/app.component.html
@@ -1,12 +1,14 @@
-<div>
+<!-- <div>
   <app-navbar></app-navbar>
   <router-outlet></router-outlet>
 </div>
 
 <br>
+<app-summary-navigation></app-summary-navigation> 
+<app-summary-component></app-summary-component> -->
 
+
+<router-outlet></router-outlet>
 <!-- <div>
   <app-input-text-field></app-input-text-field>
 </div> -->
-
-<app-summary-component></app-summary-component>
