--- a/frontend/multidialsum/src/app/navbar/navbar.component.html
+++ b/frontend/multidialsum/src/app/navbar/navbar.component.html
@@ -5,7 +5,7 @@
           <a href="#" class="nav__link">Home</a>
         </li>
         <li class="nav__item">
-          <a href="#" class="nav__link">Search Summaries</a>
+          <a href="search-summary" class="nav__link">Search Summaries</a>
         </li>
         <li class="nav__item">
           <a href="#" class="nav__link">About</a>
