ui uplift and about section added

--- a/frontend/multidialsum/src/app/navbar/navbar.component.html
+++ b/frontend/multidialsum/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<header class="header">
+<!-- <header class="header">
     <nav class="nav" [class.active]="menuOpened">
       <ul class="nav__list">
         <li class="nav__item">
@@ -8,7 +8,37 @@
           <a href="search-summary" class="nav__link">Search Summaries</a>
         </li>
         <li class="nav__item">
-          <a href="#" class="nav__link">About</a>
+          <a href="about" class="nav__link">About</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__link">Help</a>
+        </li>
+      </ul>
+    </nav>
+    <button class="nav-toggle" (click)="toggleMenu()">
+      <span class="nav-toggle__line"></span>
+      <span class="nav-toggle__line"></span>
+      <span class="nav-toggle__line"></span>
+    </button>
+  </header>
+   -->
+
+   <header class="header">
+
+    <a href="#" class="logo-link">
+      <img src="../../assets/lg.png" alt="Your Logo" class="logo-img" />
+    </a>
+
+    <nav class="nav" [class.active]="menuOpened">
+      <ul class="nav__list">
+        <li class="nav__item">
+          <a href="#" class="nav__link">Home</a>
+        </li>
+        <li class="nav__item">
+          <a href="search-summary" class="nav__link">Search Summaries</a>
+        </li>
+        <li class="nav__item">
+          <a href="about" class="nav__link">About</a>
         </li>
         <li class="nav__item">
           <a href="#" class="nav__link">Help</a>
