--- a/frontend/multidialsum/src/app/summary-navigation/summary-navigation.component.css
+++ b/frontend/multidialsum/src/app/summary-navigation/summary-navigation.component.css
@@ -1,4 +1,4 @@
-.summary-navigation {
+/* .summary-navigation {
     display: flex;
     justify-content: center;
     margin-bottom: 20px;
@@ -23,5 +23,36 @@
   
   .summary-navigation button.active {
     background-color: #15b300;
+  }
+   */
+
+   .summary-navigation {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+  }
+  
+  .summary-navigation button {
+    margin: 0 10px;
+    background-color: #636870;
+    border: none;
+    color: white;
+    padding: 8px 16px;
+    font-size: 14px;
+    font-weight: bold;
+    border-radius: 25px;
+    cursor: pointer;
+    transition: background-color 0.3s, transform 0.3s;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
+  }
+  
+  .summary-navigation button:hover {
+    background-color: #0056b3;
+    transform: translateY(-2px); 
+  }
+  
+  .summary-navigation button.active {
+    background-color: #15b300;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.08);
   }
   
