--- a/frontend/multidialsum/src/styles.css
+++ b/frontend/multidialsum/src/styles.css
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+body {
+    font-family: 'Roboto', sans-serif; /* Replace 'Roboto' with your desired font */
+    background-image: url('assets/bg.png');
+    background-size: cover;
+    background-repeat: repeat;
+    background-position: center center;
+  }
+  
