--- a/frontend/multidialsum/src/app/navbar/navbar.component.scss
+++ b/frontend/multidialsum/src/app/navbar/navbar.component.scss
@@ -1,123 +1,3 @@
-// .header {
-//   display: flex;
-//   justify-content: space-between;
-//   align-items: center;
-//   padding: 1.5rem 1rem;
-//   background-color: #333;
-//   position: relative;
-// }
-
-// .logo {
-//   color: #fff;
-//   text-decoration: none;
-//   font-size: 1.5rem;
-// }
-
-// .nav {
-//   position: absolute;
-//   top: 100%;
-//   left: 0;
-//   width: 100%;
-//   background-color: #333;
-//   overflow: hidden;
-//   max-height: 0;
-//   transition: max-height 0.3s ease;
-// }
-
-// .nav.active {
-//   max-height: 300px;
-// }
-
-// .nav__list {
-//   list-style-type: none;
-//   padding: 0;
-//   margin: 0;
-// }
-
-// .nav__item {
-//   text-align: center;
-// }
-
-// .nav__link {
-//   display: block;
-//   padding: 0.5rem 1rem;
-//   color: #fff;
-//   text-decoration: none;
-// }
-
-// .nav__link:hover {
-//   background-color: #444;
-// }
-
-// .nav-toggle {
-//   background-color: transparent;
-//   border: none;
-//   cursor: pointer;
-//   display: flex;
-//   flex-direction: column;
-//   justify-content: space-between;
-//   height: 24px;
-//   position: relative;
-//   z-index: 2;
-// }
-
-// .nav-toggle__line {
-//   background-color: #fff;
-//   height: 2px;
-//   width: 24px;
-// }
-
-// @media (min-width: 768px) {
-//   .nav {
-//     position: static;
-//     display: flex;
-//     max-height: none;
-//     overflow: visible;
-//   }
-
-//   .nav__item {
-//     text-align: left;
-//   }
-
-//   .nav__link {
-//     padding: 0 0.5rem;
-//   }
-
-//   .nav-toggle {
-//     display: none;
-//   }
-// }
-
-
-// @media (min-width: 768px) {
-//   .nav {
-//     position: static;
-//     display: flex;
-//     max-height: none;
-//     overflow: visible;
-//   }
-
-//   .nav__list {
-//     display: flex; // Make the nav items display horizontally
-//     justify-content: center; // Center the nav items
-//     width: 100%; // Ensure the nav items take up the full width of the nav container
-//   }
-
-//   .nav__item {
-//     text-align: center;
-//   }
-
-//   .nav__link {
-//     padding: 0 0.5rem;
-//   }
-
-//   .nav-toggle {
-//     display: none;
-//   }
-// }
-
-
-
 .header {
   display: flex;
   justify-content: space-between;
@@ -189,7 +69,7 @@
 }
 
 .logo-img {
-  height: 40px; // Adjust the logo size as needed
+  height: 40px; 
   width: auto;
 }
 
