--- a/frontend/multidialsum/src/app/navbar/navbar.component.html
+++ b/frontend/multidialsum/src/app/navbar/navbar.component.html
@@ -41,7 +41,7 @@
           <a href="about" class="nav__link">About</a>
         </li>
         <li class="nav__item">
-          <a href="#" class="nav__link">Help</a>
+          <a href="documentation" class="nav__link">Documentation</a>
         </li>
       </ul>
     </nav>
