--- a/frontend/multidialsum/src/app/about/about.component.html
+++ b/frontend/multidialsum/src/app/about/about.component.html
@@ -7,7 +7,7 @@
 
 <div class="card">
     <div class="card__header">
-      <h2>About The Project</h2>
+      <h2>Dialogue Summarizer</h2>
     </div>
     <div class="card__content">
       <p>Information about your organization, its mission, history, and other relevant details.</p>
