--- a/frontend/multidialsum/src/app/summary-component-english/summary-component-english.component.html
+++ b/frontend/multidialsum/src/app/summary-component-english/summary-component-english.component.html
@@ -17,6 +17,16 @@
   
   <div class="container">
     <div class="text-area-container">
+      <a> Select a example Dialogue : </a>
+
+      <select [(ngModel)]="selectedOption" (change)="onOptionSelected()">
+        <option value="option1">Example 1</option>
+        <option value="option2">Example 2</option>
+        <option value="option3">Example 3</option>
+      </select>
+      
+
+
       <textarea
         [(ngModel)]="dialogue"
         rows="4"
