added minor changes

--- a/frontend/multidialsum/src/app/about/about.component.html
+++ b/frontend/multidialsum/src/app/about/about.component.html
@@ -10,7 +10,10 @@
       <h2>About The Project</h2>
     </div>
     <div class="card__content">
-      <p>Information about your organization, its mission, history, and other relevant details.</p>
+      <p>The aim of this research is to design, develop
+         and evaluate a multilingual dialogue summary generation
+          system for customer services using dialogue summarization model 
+          with the help of the cross-lingual transfer method.</p>
     </div>
   </div>
 
@@ -19,7 +22,11 @@
       <h2>Technologies</h2>
     </div>
     <div class="card__content">
-      <p>Information about your organization, its mission, history, and other relevant details.</p>
+      <p>Use of pre trained language transformer - bart-large-xsum for developing the dialogue summarization model
+        using huggingface library. To achieve the multilingual or multi language a cross lingual transfer model which is the
+        m2m100 model was selected. Together these two models the pipeline of dialogue summarization which can support
+        more than one language was created.
+      </p>
     </div>
   </div>
 
@@ -28,7 +35,7 @@
       <h2>Author</h2>
     </div>
     <div class="card__content">
-      <p>Information about your organization, its mission, history, and other relevant details.</p>
+      <p>Tharindu De Silva | 2018367 | w1761890</p>
     </div>
   </div>
   
